--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -4,8 +4,8 @@ on:
    branches: [master]
 jobs:
   build:
-    runs-on: ubuntu:latest
-    container: node:latest
+    runs-on: node:latest
+    container: 14.17.3-buster 
     
     strategy:
       matrix:
