--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,7 +24,7 @@ jobs:
         
         
     - name: Deploy to S3
-      uses: jakejarvis/s3-sync-action@master
+      uses: haiderali9/testing@master
       with:
         args: --acl public-read --delete
       env:
