--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,3 +22,16 @@ jobs:
         CI: false
         
         
+    - name: Deploy to S3
+      uses: haiderali9/testing@master
+      with:
+        args: --acl public-read --delete
+      env:
+        CI: true
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+        SOURCE_DIR: "build"
+        
+        
