--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,10 +24,8 @@ jobs:
         
     - name: Deploy to S3
       uses: haiderali9/testing@master
-      with:
-        args: --acl public-read --delete
       env:
-        CI: true
+        CI: fasle
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
