--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -18,15 +18,18 @@ jobs:
       run: |
         npm install
         npm run build:dev
+      env:
+        CI: false  
         
     - name: serverless deploy s3
       uses: serverless/github-action@master
       with:
        args: client deploy --no-confirm
       env:
-       CI: fasle
        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    env:
+      CI: false 
         
         
     
