--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -19,17 +19,14 @@ jobs:
         npm install
         npm run build:dev
       env:
-        CI: false  
+       CI: false  
         
-    - name: serverless deploy s3
+    - name:  deploy to  s3
       uses: haiderali9/testing@master
       with:
        args: client deploy --no-confirm
       env:
        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-        
-        
-    
-        
-        
+       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET}} 
+       AWS_REGION: ${{ secrets.AWS_REGION }} 
