--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,33 +1,39 @@
-name: build meraid
-
+name: S3 Deploy
 on:
   push:
-    branches: 
+    branches:
       - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js 13.10
-      uses: actions/setup-node@v1
-      with:
-        node-version: '13.10'
-    - name: Install npm
-      run: |
-        npm install
-        npm run build:dev
-      env:
-       CI: false  
-        
-    - name:  deploy to  s3
-      uses: actions/checkout@v1
-      with:
-       args: client deploy --no-confirm
-      env:
-       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-       AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET}} 
-       AWS_REGION: ${{ secrets.AWS_REGION }} 
-       SOURCE_DIR: "build"
+      - name: Checkout source code
+        uses: actions/checkout@master
+
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-build-
+            ${{ runner.OS }}-
+
+      - name: Install
+        run: npm install
+
+      - name: Build
+        run: npm run build:dev
+
+      - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region eu-west-3 \
+            build s3://www.testing-meraid.com
+
+
