--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build
         run: npm run build:dev
+        env:
+         CI: false
 
       - name: Deploy
         env:
