--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Create .env file
         run: |
           
-          touch testing/.env
+          touch .env
           env=${{ secrets.ENV_CONTENT }}
           echo "$env" > testing/.env
           
