--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -45,7 +45,7 @@ jobs:
         env:
          CI: false
 
-      - name: Deploy
+      - name: Deployment
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
