--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,11 +24,11 @@ jobs:
         run: npm install
           
       
-      - name: Create .env.production.local file
+      - name: Create env file
         env:
           ENV_CONTENT: ${{ secrets.ENV_CONTENT}}
           ENV_CONTENT_PRODUCTION : ${{ secrets.ENV_CONTENT_PRODUCTION }}
-          
+        run: |
           
 
       - name: Build
