--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install
           
       
-      - name: Create env file
+      - name: env 
         env:
           ENV_CONTENT: ${{ secrets.ENV_CONTENT}}
           ENV_CONTENT_PRODUCTION : ${{ secrets.ENV_CONTENT_PRODUCTION }}
