--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -29,7 +29,8 @@ jobs:
           ENV_CONTENT: ${{ secrets.ENV_CONTENT}}
           ENV_CONTENT_PRODUCTION : ${{ secrets.ENV_CONTENT_PRODUCTION }}
         run: |
-          
+           echo "$ENV_CONTENT"
+           echo "$ENV_CONTENT_PRODUCTION "
 
       - name: Build
         run: npm run build:dev
